Closed Bug 901414 Opened 11 years ago Closed 11 years ago

Various build failures under ipc/chromium on GNU/kFreeBSD

Categories

(Core :: IPC, defect)

24 Branch
All
Other
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26
Tracking Status
firefox24 --- fixed
firefox25 --- fixed
firefox26 --- fixed

People

(Reporter: glandium, Assigned: glandium)

Details

(Whiteboard: [qa-])

Attachments

(1 file, 1 obsolete file)

      No description provided.
Essentially, GNU/kFreeBSD is a FreeBSD kernel with a GNU userland (including glibc).
Attachment #785619 - Flags: review?(benjamin)
Assignee: nobody → mh+mozilla
Added a missing bit.
Attachment #785706 - Flags: review?(benjamin)
Attachment #785619 - Attachment is obsolete: true
Attachment #785619 - Flags: review?(benjamin)
Attachment #785706 - Flags: review?(benjamin) → review+
Comment on attachment 785706 [details] [diff] [review]
Fix ipc/chromium to build for GNU/kFreeBSD

[Approval Request Comment]
User impact if declined: Build failure on GNU/kFreeBSD. Would be nice to have on ESR24.
Testing completed (on m-c, etc.): Tested on GNU/kFreeBSD
Risk to taking this patch (and alternatives if risky): NPOTB
String or IDL/UUID changes made by this patch: None
Attachment #785706 - Flags: approval-mozilla-beta?
Attachment #785706 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/286f086c2acc
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Attachment #785706 - Flags: approval-mozilla-beta?
Attachment #785706 - Flags: approval-mozilla-beta+
Attachment #785706 - Flags: approval-mozilla-aurora?
Attachment #785706 - Flags: approval-mozilla-aurora+
Assuming no verification needed here. Please add the verifyme keyword and remove the [qa-] whiteboard tag to request verification.
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.