Bug 901414 - Fix ipc/chromium to build for GNU/kFreeBSD. r=bsmedberg, a=lsblakk